[gd_scene load_steps=4 format=3 uid="uid://c3ak50v8tmhr2"]

[ext_resource type="Script" uid="uid://rcn8rsbscvf8" path="res://health bar.gd" id="1_kdjhy"]
[ext_resource type="Texture2D" uid="uid://bp5bsyf2edpuj" path="res://Tileset/background/tile_0044.png" id="1_m7ell"]
[ext_resource type="Texture2D" uid="uid://d3e82oe81qgo4" path="res://Tileset/background/tile_0046.png" id="3_srckl"]

[node name="health bar" type="Node2D"]
position = Vector2(10, 10)
script = ExtResource("1_kdjhy")
Heart1 = ExtResource("1_m7ell")
Heart0 = ExtResource("3_srckl")

[node name="Heart1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(7, 6)
texture = ExtResource("1_m7ell")

[node name="Heart3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(43, 6)
texture = ExtResource("1_m7ell")

[node name="Heart2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(25, 6)
texture = ExtResource("1_m7ell")
